# chiefwiggum

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PACKAGING_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SIMPLE_UPDATE_WORKFLOW.md  TASK_COMPLETION_FIX_IMPLEMENTATION.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  WORKTREE_IMPLEMENTATION.md  archive_orphaned_tasks.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  validation.yml
chiefwiggum/: __init__.py  _version.py  alerts.py  cache.py  cli.py  completion.py  config.py  coordination.py  daemon.py  database.py  fix_plan_parser.py  fix_plan_writer.py  git_merge.py  git_verifier.py  icons.py  keyboard.py  models.py  monitoring.py  outcome.py  outcome_cli.py  paths.py  prompt_generator.py  prompt_grader.py  service.py  spawner.py  tui.py  worktree_manager.py
chiefwiggum/resources/: __init__.py  com.chiefwiggum.daemon.plist
chiefwiggum/scripts/: __init__.py  ralph_loop.sh  ralph_loop.sh.backup-20260123-170632
chiefwiggum/scripts/lib/: cost_tracker.sh  profiler.sh  response_analyzer.sh  token_estimator.sh
chiefwiggum/tui/: __init__.py  app.py  dashboard.py  handlers.py  helpers.py  instance_detail.py  panels.py  state.py
scripts/: deploy.sh  dev-setup.sh  quick-reinstall.sh
specs/: RALPH_TASK_INTEGRATION.md  TUI_DESIGNER_PROMPT.md
tests/: __init__.py  run_validation_suite.sh  test_cache.py  test_cli.py  test_completion.py  test_concurrency.py  test_config.py  test_coordination.py  test_daemon_autospawn.py  test_daemon_intents.py  test_daemon_lifecycle.py  test_daemon_outcome_consumption.py  test_database.py  test_error_recovery.py  test_fix_plan_parser.py  test_fix_plan_writer.py  test_git_merge.py  test_git_verifier.py  test_integration_lifecycle.py  test_integration_task_completion.py  test_jq_validation.sh  test_monitoring.py  test_new_features.py  test_outcome.py  test_paths.py  test_prompt_generator.py  test_ralph_loop_comprehensive.py  test_response_analyzer.py  test_response_analyzer_task_id.py  test_scripts.py  test_service.py  test_session_management.py  test_spawner_lifecycle.py  test_tui.py  test_user_journeys.py  test_worktree_integration.py  test_worktree_manager.py
