[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chiefwiggum"
dynamic = ["version"]
description = "Multi-Ralph coordination system for Claude Code instances"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Brady Dibble"}
]
keywords = ["ralph", "coordination", "claude-code", "task-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
]

[project.scripts]
chiefwiggum = "chiefwiggum.cli:main"
wig = "chiefwiggum.cli:main"

[project.urls]
Homepage = "https://github.com/bradydibble/chiefwiggum"
Repository = "https://github.com/bradydibble/chiefwiggum"

[tool.hatch.build.targets.wheel]
packages = ["chiefwiggum"]

[tool.hatch.build.targets.wheel.force-include]
# Include shell scripts in the wheel (must be relative paths)
"chiefwiggum/scripts/ralph_loop.sh" = "chiefwiggum/scripts/ralph_loop.sh"
"chiefwiggum/scripts/lib/date_utils.sh" = "chiefwiggum/scripts/lib/date_utils.sh"
"chiefwiggum/scripts/lib/response_analyzer.sh" = "chiefwiggum/scripts/lib/response_analyzer.sh"
"chiefwiggum/scripts/lib/circuit_breaker.sh" = "chiefwiggum/scripts/lib/circuit_breaker.sh"
"chiefwiggum/scripts/lib/profiler.sh" = "chiefwiggum/scripts/lib/profiler.sh"
"chiefwiggum/scripts/lib/token_estimator.sh" = "chiefwiggum/scripts/lib/token_estimator.sh"
"chiefwiggum/scripts/lib/cost_tracker.sh" = "chiefwiggum/scripts/lib/cost_tracker.sh"

[tool.hatch.build.targets.sdist]
include = [
    "chiefwiggum/**/*.py",
    "chiefwiggum/**/*.sh",
    "tests/**/*.py",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.version]
path = "chiefwiggum/_version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
